# ncs-samples

psm/: CMakeLists.txt  nrf9160dk_nrf9160ns.overlay  prj.conf  sample.yaml
psm/src/: main.c
pwr_profiling/: CMakeLists.txt  Kconfig  hci_rpmsg.conf  prj.conf
pwr_profiling/src/: main.c
